k8s/manifestfiles/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-app-service
spec:
  type: ClusterIP
  selector:
    app: go-app
  ports:
    - protocol: TCP
      port: 80       # The port the service exposes outside
      targetPort: 8080 # The port inside the container to forward traffic to
